--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Panda Site</title>
   </head>
-  <body></body>
+  <body>
+    <h1>Welcome to the Panda site!</h1>
+    <p>Congratulations! The HTTP Server is working!</p>
+  </body>
 </html>
