Return template html and css file to client.

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -10,4 +11,213 @@
     <h1>Welcome to the Panda site!</h1>
     <p>Congratulations! The HTTP Server is working!</p>
   </body>
+</html>
+-->
+
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+  <!-- This code is written in October 2021 -->
+
+
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="author" content="Khai Duong">
+  <meta name="description"
+    content="This wiki acts as a manual for the Albion Price Checker application. It can be accessed from within the application or by using a web browser. It provides information about and guides on how to use the application and technical specifications.">
+  <title>Albion Price Checker Wiki</title>
+  <link rel="icon" href="images/albion_logo.ico" type="image/x-icon">
+  <link rel="stylesheet" href="styles.css">
+
+</head>
+
+<body>
+  <!-- Navlist -->
+  <nav class="navbar">
+    <ul>
+      <!-- Home -->
+      <li class="active"><a href="#">Home</a></li>
+
+      <!-- About Page and dropdown menu-->
+      <li>
+        <!-- First object and display of About dropdown -->
+        <div class="navbar-dropdown">
+          <a href="about.html" title="About">About</a>
+
+          <!-- Dropdown menu content -->
+          <div class="navbar-dropdown-content">
+            <a href="#">Project</a>
+            <a href="#">The Developer</a>
+          </div>
+        </div>
+      </li>
+      <!-- Github -->
+      <li>
+        <a href="https://github.com/asiangoldfish/Albion_Price_Checker" target="_blank"
+          title="Opens the project's GitHub repository in a new tab">
+          GitHub
+        </a>
+      </li>
+
+      <!-- Download application -->
+      <li>
+        <a href="#">Download</a>
+      </li>
+
+      <!-- Contact -->
+      <li><a href="contact.html" title="Contact" title="Contact">Contact</a></li>
+    </ul>
+  </nav>
+
+  <br>
+
+  <header>
+    <h1>Albion Price Checker Wiki</h1>
+  </header>
+
+  <!-- Main part of the body -->
+  <main>
+    <!--
+      <a href="images/albion_.png" target="_blank">
+        <img class="front-image" src="images/albion_.png" alt="Albion online logo and background">
+      </a>
+      <p>
+        (Opens image in a new tab)
+      </p>-->
+    <p>
+      Welcome to the Albion Price Checker wiki. This wiki will cover the following features in the Price Checker
+      application:
+    </p>
+    <br>
+
+    <!-- Table of content -->
+    <div id="toc-container">
+      <p class="toc-title">Table of Content</p>
+      <ul class="toc-list">
+        <li>
+          <a href="#overview">Overview</a>
+        </li>
+        <li>
+          <a href="#get-started">Get Started</a>
+        </li>
+        <li>
+          <a href="#item-price-checker" title="Permalink to item price checker category">Item Price Checker</a>
+          </a>
+        </li>
+        <li>
+          <a href="#personal-regear-program" title="Permalink to personal regear program section">Personal Regear
+            Program</a>
+        </li>
+        <li>
+          <a href="#code" title="Permalink to the code section">Code</a>
+        </li>
+      </ul>
+    </div>
+
+    <hr>
+
+    <h2 id="overview">1. Overview</h2>
+    <p>
+      Albion Price Checker is still in the development stage and aims
+      to be a cross-platform utility tool for Albion Online players. It's
+      intended to be the pocket app: an easy to use tool that lets you check
+      item prices in no time. It will also feature a personal regear
+      program so you can save your ZvZ sets, always know where to get them,
+      and how much you have to pay. For leaders and managers out there, a regear
+      program at large scale will also be available with additional features,
+      like crafting cost for regear.
+    </p>
+    <p>
+      Below is a list of all features that will be included in the application.
+      More features may be included as time goes or as requested:
+    </p>
+    <ul>
+      <li>Price Checker</li>
+      <li>Personal Regear Program</li>
+      <li>Guild/Alliance Regear Program</li>
+      <li>Crafting Calculator</li>
+      <li>Account system to support alts and several characters</li>
+    </ul>
+
+    <hr>
+
+    <h2 id="get-started">2. Get Started</h2>
+    <p>
+      Download the application from the <a href="https://github.com/asiangoldfish/Albion_Price_Checker/releases"
+        target="_blank">
+        download page</a>. This directs to the project's GitHub page's release
+      section. Find the latest version of the application, which is always at the top.
+      Expand <cite>Assets</cite> and download "<cite>albion_price_checker.zip.</cite>"
+      For the time being, the application is not available to download on Android
+      or iOS. It's only available on Windows.
+    </p>
+    <p>
+      If you are using the first Development Stage version, then you can run
+      the program with albion-price-checker.exe. Later versions may change this due
+      to compatibility across operating systems.
+    </p>
+
+    <hr>
+
+    <h2 id=item-price-checker>2. Item Price Checker</h2>
+    <p>
+      <span>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Explicabo quasi pariatur rerum, animi aliquam,
+        nostrum, suscipit repellendus aspernatur impedit maiores eum beatae est totam minima commodi iure cumque
+        recusandae! A in possimus distinctio sequi! Commodi autem nam accusamus rerum ipsa delectus obcaecati quae
+        eligendi deserunt! Facere eum aliquid et, mollitia numquam natus quod vero amet cupiditate illum, voluptatum
+        odio eos autem quia distinctio! Accusamus molestiae consequuntur nisi recusandae voluptate praesentium nam.
+        Repellendus, dicta quia? Praesentium minima sapiente hic cumque doloremque illo aperiam, animi esse laboriosam
+        ut ea non sequi culpa? Sequi asperiores molestias illo, excepturi possimus cupiditate porro laborum
+        tempore?</span>
+    </p>
+
+    <hr>
+
+    <h2 id="personal-regear-program">3. Personal Regear Program</h2>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus laudantium soluta ad, laborum ratione nam ducimus
+      odio facilis reprehenderit suscipit ex sed vel eum vero molestias dolores, iste reiciendis earum odit ipsam labore
+      et numquam maxime! Facere ratione nam nihil voluptatibus dolor, adipisci temporibus tempora quisquam alias
+      corporis unde magni possimus odit placeat ducimus eius ipsum obcaecati accusamus inventore reprehenderit ullam
+      perspiciatis voluptates id repudiandae. Praesentium magni, iure, facere voluptates asperiores officia nesciunt
+      alias quibusdam corrupti amet nisi, voluptate fuga accusantium cumque! Eos, fugiat nesciunt! Tempora ratione
+      inventore, saepe numquam vero accusantium repellat atque officia nihil. Facere a est ratione!
+    </p>
+
+    <hr>
+
+    <h2 id="code">4. Code</h2>
+
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos delectus cumque odio! Qui culpa temporibus beatae
+      quis illo recusandae, nemo natus tenetur ea quidem adipisci, labore necessitatibus? Adipisci maxime, labore
+      reprehenderit pariatur recusandae, nisi neque tenetur fugit, cum magnam beatae repudiandae eum nesciunt
+      perspiciatis? Inventore, rerum optio ullam, perferendis delectus ex quas vero assumenda voluptatibus earum ut eos
+      aspernatur voluptate accusantium reiciendis tempora qui repudiandae asperiores recusandae exercitationem commodi
+      illo? Officiis tempora illo, nam at quo iusto, voluptatem blanditiis, alias hic doloribus excepturi? Expedita hic
+      voluptatibus eaque quos perspiciatis repellendus culpa modi ducimus numquam accusantium repellat aliquam,
+      perferendis incidunt inventore dignissimos possimus similique neque maxime, totam voluptatum illo corporis nam
+      iure? Incidunt atque odit minus enim, cupiditate iure quia, numquam odio quibusdam, voluptatem deleniti
+      recusandae? Accusantium doloribus architecto nemo placeat quidem autem dolorem dicta laborum neque earum est,
+      omnis quae provident nisi quam? Doloribus ad maiores eligendi asperiores voluptatum! Corporis rerum deserunt dolor
+      veritatis sequi explicabo consectetur cumque commodi eos! Soluta, et molestiae voluptatibus assumenda tenetur
+      laborum, neque fuga quo dolore sunt aliquam earum reiciendis perspiciatis qui cumque amet error corporis
+      asperiores sapiente, corrupti magni? Odit doloribus dignissimos, aliquam sapiente aperiam et ullam, aut, earum
+      labore blanditiis eligendi necessitatibus. Possimus.
+    </p>
+
+    <hr>
+
+  </main>
+
+  <!-- Footer with various info and pages -->
+  <footer>
+    <p>&copy;Copyleft 2021 by Khai Duong. All rights reversed</p>
+  </footer>
+
+</body>
+
 </html>
